archive/standalone-chrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: standalone-chrome-service
  namespace: biocomplexity
spec:
  selector:
    app: standalone-chrome
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
