archive/standalone-chrome/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: standalone-chrome-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
  - host: standalone-chrome.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: standalone-chrome-service
            port:
              number: 8080
  - host: standalone-chrome.uvadcos.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: standalone-chrome-service
            port:
              number: 8080
